--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <nav class="navigation">
         <img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop">
         <ul class="navigation-list">
-          <li class="navigation-list__item navigation-list__item_open"><a class="navigation-list__link" href="#">Каталог</a>
+          <li class="navigation-list__item navigation-list__item--open"><a class="navigation-list__link" href="#">Каталог</a>
           <ul class="navigation-menu">
             <li class="navigation-menu__item"><a class="navigation-menu__link" href="#"><b>Новинки</b></a></li>
             <li class="navigation-menu__item"><a class="navigation-menu__link" href="catalog.html">Сливочное</a></li>
@@ -21,22 +21,22 @@
           <li class="navigation-list__item"><a class="navigation-list__link" href="#">О Компании</a></li>
         </ul>
         <ul class="user-nav">
-          <li class="user-nav__list user-nav__list_search"><button class="user-nav__btn btn-search" type="button"><span class="visually-hidden">Поиск</span> </button>
-          <form class="nav-form nav-form_search" method="get" action="https://echo.htmlacademy.ru">
+          <li class="user-nav__list user-nav__list--search"><button class="user-nav__btn btn-search" type="button"><span class="visually-hidden">Поиск</span> </button>
+          <form class="nav-form nav-form--search" method="get" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="search-info">Поиск</label>
-            <input class="nav-input nav-input_search" type="text" name="serch" id="search-info" placeholder="Что ищем?">
+            <input class="nav-input nav-input--search" type="text" name="serch" id="search-info" placeholder="Что ищем?">
           </form></li>
-          <li class="user-nav__list user-nav__list_login"><button class="user-nav__btn btn-login" type="button">Вход</button>
-            <form class="nav-form nav-form_login" method="post" action="https://echo.htmlacademy.ru">
+          <li class="user-nav__list user-nav__list--login"><button class="user-nav__btn btn-login" type="button">Вход</button>
+            <form class="nav-form nav-form--login" method="post" action="https://echo.htmlacademy.ru">
               <label class="visually-hidden" for="email-address">Электронная почта</label>
-              <input class="nav-input nav-input_email" id="email-address" type="email" name="email" placeholder="Электронная почта">
+              <input class="nav-input nav-input--email" id="email-address" type="email" name="email" placeholder="Электронная почта">
               <label class="visually-hidden" for="password-info">Пароль</label>
-              <input class="nav-input nav-input_password" type="password" name="password" id="password-info" placeholder="Пароль">
-              <button type="button" class="button button_login>Войти</button>
-              <a class="nav-login-link nav-login-link_password" href="#">Забыли пароль?</a>
-              <a class="nav-login-link nav-login-link_registration" href="#">Новая регистрация</a>
+              <input class="nav-input nav-input--password" type="password" name="password" id="password-info" placeholder="Пароль">
+              <button type="button" class="button button--login">Войти</button>
+              <a class="nav-login-link nav-login-link--password" href="#">Забыли пароль?</a>
+              <a class="nav-login-link nav-login-link--registration" href="#">Новая регистрация</a>
             </form></li>
-            <li class="user-nav__list user-nav__list_basket">Корзина</li>
+            <li class="user-nav__list user-nav__list--basket">Корзина</li>
           </ul>
         </nav>
         <p class="header-time-info">С 10 до 20,ежедневно<br>
@@ -46,71 +46,70 @@
         <h1 class="visually-hidden">Gllacy Shop</h1>
         <div class="slider">
           <ul class="slider-list">
-            <li class="slider-item slider-item_first">
+            <li class="slider-item slider-item--first">
               <img class="slider-item__image" src="img/slid-1.png" width="1045" height="881" alt="Пломбир">
               <p class="slider-item__title">Крем-брюле и пломбир с малиновым джемом</p>
             </li>
-            <li class="slider-item slider-item_second">
+            <li class="slider-item slider-item--second">
               <img class="slider-item__image" src="img/slid-2.png" width="1045" height="881" alt="Шоколадный пломбир">
               <p class="slider-item__title">Шоколадный пломбир и лимонный сорбет</p>
             </li>
-            <li class="slider-item slider-item_third">
+            <li class="slider-item slider-item--third">
               <img class="slider-item__image" src="img/slid-3.png" width="1045" height="881" alt="Пломбир с помадкой">
               <p class="slider-item__title">Пломбир с помадкой и клубничный щербет</p>
             </li>
           </ul>
-          <!--input type="radio"  ?? -->
-          <a class="button button_big" href="#">Давайте оба!</a>
+          <a class="button button--big" href="#">Давайте оба!</a>
         </div>
         <section class="offers">
-          <article class="offers-item offers-item_jam">
+          <article class="offers-item offers-item--jam">
             <h2 class="offers-item__title">Малинка даром!</h2>
             <p class="offers-item__info">При покупке 2 кг любого фруктового мороженого,добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a class="button button_jam" href="#">Хочу варенье!</a>
+            <a class="button button--jam" href="#">Хочу варенье!</a>
           </article>
-          <article class="offers-item offers-item_chocolate">
+          <article class="offers-item offers-item--chocolate">
             <h2 class="offers-item__title">Шоколадки даром!</h2>
             <p class="offers-item__info">При покупке 2 кг пломбира,добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно</p>
-            <a class="button button_chocolate" href="#">Хочу шоколадки!</a>
+            <a class="button button--chocolate" href="#">Хочу шоколадки!</a>
           </article>
         </section>
         <ul class="product">
           <li class="icy-cream-item">
             <a class="icy-cream-item__link" href="#">
               <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-              <p class="icy-cream-item__info">310 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+              <p class="icy-cream-item__info">310 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
               <p class="icy-cream-item__description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p></a>
-              <button type="button" class="button button_product">Быстрый просмотр</button>
+              <button type="button" class="button button--product">Быстрый просмотр</button>
             </li>
             <li class="icy-cream-item">
               <a class="icy-cream-item__link" href="#">
                 <img class="icy-cream-item__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-                <p class="icy-cream-item__info">380 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                <p class="icy-cream-item__info">380 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                 <p class="icy-cream-item__description">Сливочно-кофейное с кусочками шоколада</p></a>
-                <button type="button" class="button button_product">Быстрый просмотр</button>
+                <button type="button" class="button button--product">Быстрый просмотр</button>
               </li>
               <li class="icy-cream-item">
                 <a class="icy-cream-item__link" href="#">
                   <img class="icy-cream-item__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-                  <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                  <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                   <p class="icy-cream-item__description">Сливочно-клубничное с присыпкой из белого шоколада</p></a>
-                  <button type="button" class="button button_product">Быстрый просмотр</button>
+                  <button type="button" class="button button--product">Быстрый просмотр</button>
                 </li>
                 <li class="icy-cream-item">
                   <a class="icy-cream-item__link" href="#">
                     <img class="icy-cream-item__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-                    <p class="icy-cream-item__info">415 ₽<span class="icy-cream-item__info_weight">/кг</span></p>
+                    <p class="icy-cream-item__info">415 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
                     <p class="icy-cream-item__description">Сливочное крем-брюле с карамельной подливкой</p></a>
-                    <button type="button" class="button button_product">Быстрый просмотр</button>
+                    <button type="button" class="button button--product">Быстрый просмотр</button>
                   </li>
                 </ul>
                 <div class="about-ice-cream">
                   <h3 class="about-ice-cream__title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
                   <ul class="about-gllacy">
-                    <li class="about-gllacy__info about-gllacy__info_icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-                    <li class="about-gllacy__info about-gllacy__info_cow">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
-                    <li class="about-gllacy__info about-gllacy__info_leaf">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-                    <li class="about-gllacy__info about-gllacy__info_thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+                    <li class="about-gllacy__info about-gllacy__info--icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+                    <li class="about-gllacy__info about-gllacy__info--cow">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+                    <li class="about-gllacy__info about-gllacy__info--leaf">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+                    <li class="about-gllacy__info about-gllacy__info--thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
                   </ul>
                 </div>
                 <div class="block">
@@ -122,7 +121,7 @@
                     <p class="subscribe__info">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
                     <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru">
                       <label class="visually-hidden" for="subscribe-email">Электронная почта</label>
-                      <input class="nav-input nav-input_subscribe" type="email" name="email" id="subscribe-email" placeholder="Электронная почта">
+                      <input class="nav-input nav-input--subscribe" type="email" name="email" id="subscribe-email" placeholder="Электронная почта">
                       <button class="button" type="submit">Отправить</button>
                     </form>
                   </section>
@@ -132,19 +131,19 @@
                   <div class="address">
                     <p class="address__street">Адрес главного офиса и офлайн-магазина:<b>ул.Большая Конюшенная 19/8,Санкт-Петербург</b></p>
                     <p class="address__phone">Для заказов по телефону:<b>8 812 450-25-25</b>(с 10 до 20 ежедневно)</p>
-                    <button type="button" class="button button_feedback">Форма обратной связи</button>
+                    <button type="button" class="button button--feedback">Форма обратной связи</button>
                   </div>
                 </section>
               </main>
               <footer class="main-footer">
                 <ul class="social-btn">
-                  <li class="social-btn__item"><a class="social-btn__link social-btn__link_twitter" href="#">Твитер</a></li>
-                  <li class="social-btn__item"><a class="social-btn__link social-btn__link_insta" href="#">Инстаграм</a></li>
-                  <li class="social-btn__item"><a class="social-btn__link social-btn__link_fb" href="#">Фейсбук</a></li>
-                  <li class="social-btn__item"><a class="social-btn__link social-btn__link_vk" href="#">Вконтакте</a></li>
+                  <li class="social-btn__item"><a class="social-btn__link social-btn__link--twitter" href="#">Твитер</a></li>
+                  <li class="social-btn__item"><a class="social-btn__link social-btn__link--insta" href="#">Инстаграм</a></li>
+                  <li class="social-btn__item"><a class="social-btn__link social-btn__link--fb" href="#">Фейсбук</a></li>
+                  <li class="social-btn__item"><a class="social-btn__link social-btn__link--vk" href="#">Вконтакте</a></li>
                 </ul>
                 <ul class="helpful-info">
-                  <li class="helpful-info__item helpful-info__item_heart"><a class="footer-link" href="#">Для поставщиков</a></li>
+                  <li class="helpful-info__item helpful-info__item--heart"><a class="footer-link" href="#">Для поставщиков</a></li>
                   <li class="helpful-info__item"><a class="footer-link" href="#">Наши документы</a></li>
                   <li class="helpful-info__item"><a class="footer-link" href="#">О производстве</a></li>
                   <li class="helpful-info__item"><a class="footer-link" href="#">Экологические стандарты</a></li>
